--- a/quant_meths_project/nccfr_tv.Rnw
+++ b/quant_meths_project/nccfr_tv.Rnw
@@ -32,6 +32,9 @@
   <<load_libraries_data>>=
   @
   \maketitle
+  \begin{abstract}
+    The T-V distinction is a phenomenon that occurs in various languages in which second person singular pronouns take one form or another depending on one's interlocutor. In French, these forms are \emph{tu}/\emph{te}/\emph{toi} versus \emph{vous}. Various studies have suggested what the social constraints of the choice between these two pronouns are \citep[e.g.,][]{brown_pronouns_1960, gardner-chloros_ni_1991, morford_social_1997, schoch_probleme_1978}. The Nijmegen Corpus of Casual French (NCCFr) \citep{torreira_nijmegen_2010} provides an opportunity to perform a quantitative analysis on the factors that play a role in this phenomenon. Groups of three friends, one being a confederate, were recorded in a semi-controlled environment, all of which included either all men or all women. Subjects were also coded as being either from the Paris metropolitan area or not. The social factors available in this data -- gender, region, and age -- were analyzed here using a binomial logistic regression model. It was found that while \emph{vous} is is much less frequent than \emph{tu} for all speakers in general, it does appear to be more frequent among females than males. Although the small effect size is not particularly enlightening, the results do fit into \citeauthor{brown_pronouns_1960}'s (\citeyear{brown_pronouns_1960}) dichotomy of power versus solidarity for explaining how these pronouns are navigated, as the behavior of the speakers recorded in the NCCFr can easily be explained by suggesting that they feel high solidarity as friends.
+  \end{abstract}
   \section{Introduction}
     \label{sec:intro}
     The T-V distinction traditionally refers to a contrast in pronominal forms of address that is constrained by the power relationship between two speakers as well as their social solidarity or lack thereof \citep{brown_pronouns_1960}. For example, English speakers once employed either \emph{thou} or \emph{you/ye} as a subject pronoun when addressing their interlocutor, which \citet{brown_pronouns_1960} supposed to have been based on whether the interlocutor was familiar or someone from whom they wanted to maintain a polite distance (p.~252). The phenomenon in European languages is assumed to stem from its existence in Latin, in which the respective pronouns were \emph{tu} and \emph{vos}, hence ``T-V'' \citep[p.~254]{brown_pronouns_1960}. Today, the T-V distinction is still a salient component of French in the form of the pronouns \emph{tu} and \emph{vous}, matching the initial letters of the earlier Latin pronouns.
